--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+  <div class="navbar-left">
+    <a href="#" class="nav-left-item">Google 정보</a>
+    <a href="#" class="nav-left-item">스토어</a>
+  </div>
   <div class="navbar">
     <a href="#" class="nav-item">Gmail</a>
     <a href="#" class="nav-item">Images</a>
@@ -26,10 +30,6 @@
     <div class="button-area">
       <button class="button-style">Google Serach</button>
       <button class="button-style">I'm Feeing lucky</button>
-    </div>
-    <div class="language-area">
-      Google offared in:
-      <a href="#" class="language">한국어</a>
     </div>
   </div>
   
